# tuple

./: Makefile  README.md  tuple.cabal
Tools/: MkTuple.hs
src/Data/Tuple/: All.hs  Curry.hs  Prepend.hs  Select.hs  Sequence.hs  Update.hs
